--- a/main_updated.ipynb
+++ b/main_updated.ipynb
@@ -14,7 +14,7 @@
    "id": "c2abe428",
    "metadata": {},
    "source": [
-    "Despues: GRid i justificaciones"
+    "Despues: justificaciones, error analisis, efficient code, analisis of hyperparameters i compareu-los amb els de la part supervisad"
    ]
   },
   {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8bd154ab",
    "metadata": {},
    "outputs": [
@@ -278,6 +278,7 @@
     "for name, model in models.items():\n",
     "    grid_search = GridSearchCV(model, param_grid[name], cv=5, scoring='accuracy')\n",
     "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
     "    best_model = grid_search.best_estimator_\n",
     "    y_pred = best_model.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
@@ -300,14 +301,6 @@
     "# Mejores hiperparámetros\n",
     "best_params_df = pd.DataFrame(list(best_params.items()), columns=['Model', 'Best Parameters'])\n",
     "best_params_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5579e319",
-   "metadata": {},
-   "source": [
-    "## Part 2:"
    ]
   },
   {
@@ -384,8 +377,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5579e319",
+   "metadata": {},
+   "source": [
+    "## Part 2:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "60f0ba08",
    "metadata": {},
    "outputs": [
@@ -414,6 +415,7 @@
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\Claudia\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
       "[nltk_data]     C:\\Users\\Claudia\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
@@ -426,7 +428,7 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,33 +456,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "02c2a642",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessament del text\n",
-    "stop_words = set(stopwords.words('english'))\n",
-    "\n",
-    "def get_sentiment_score(word, pos):\n",
-    "    \"\"\"\n",
-    "    Aquesta funció obté el sentiment del synset a partir de SentiWordNet.\n",
-    "    \"\"\"\n",
-    "    synsets = wn.synsets(word, pos=pos)\n",
-    "    if synsets:\n",
-    "        synset = synsets[0]  # Es fa servir el primer synset que trobem\n",
-    "        senti_score = swn.senti_synset(synset.name())\n",
-    "        return senti_score.pos_score(), senti_score.neg_score()\n",
-    "    return 0, 0  # Si no hi ha synset, retornem 0 com a sentiment neutre"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "2367313b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Para el tagging tambien sirve el spacy (mejor?)\n",
     "\n",
     "def preprocess_review(text):\n",
     "    \"\"\"\n",
@@ -514,7 +496,26 @@
     "        sentiment_pos += pos_score\n",
     "        sentiment_neg += neg_score\n",
     "\n",
-    "    return sentiment_pos, sentiment_neg"
+    "    return sentiment_pos, sentiment_neg\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2367313b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sentiment_score(word, pos):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció obté el sentiment del synset a partir de SentiWordNet.\n",
+    "    \"\"\"\n",
+    "    synsets = wn.synsets(word, pos=pos)\n",
+    "    if synsets:\n",
+    "        synset = synsets[0]  # Es fa servir el primer synset que trobem\n",
+    "        senti_score = swn.senti_synset(synset.name())\n",
+    "        return senti_score.pos_score(), senti_score.neg_score()\n",
+    "    return 0, 0  # Si no hi ha synset, retornem 0 com a sentiment neutre"
    ]
   },
   {
